# cpp-transport-catalogue

./: .gitignore  CMakeLists.txt
transport-catalogue/: geo.h  input_reader.cpp  input_reader.h  main.cpp  stat_reader.cpp  stat_reader.h  tests.cpp  tests.h  transport_catalogue.cpp  transport_catalogue.h
transport-catalogue/business_logic/: UserRouteManager.cpp  UserRouteManager.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h
transport-catalogue/domain/: domain.cpp  domain.h  geo.cpp  geo.h  transport_catalogue.proto
transport-catalogue/infrastructure/: io_requests_base.cpp  io_requests_base.h  json_reader.cpp  json_reader.h  map_renderer.cpp  map_renderer.h  request_handler.h  serialization.cpp  serialization.h  stream_reader.cpp  stream_reader.h
transport-catalogue/tests/: tests.cpp  tests.h
transport-catalogue/tests/test_case/: json_route_case_01_input.json  json_route_case_01_output.json  json_route_case_02_output.json  json_route_case_03_input.json  json_route_case_03_output.json  json_route_case_04_input.json  json_route_case_04_output.json  json_route_case_05_input.json  json_route_case_06_input.json  json_route_case_07_input.json  maprender_case_01_input.json  maprender_case_02_input.json  maprender_case_03_input.json  maprender_case_04_input.json  maprender_case_big_data_input.json  maprender_case_big_data_output.json  maprender_case_final_opentest_1.json  maprender_case_final_opentest_2.json  maprender_case_final_opentest_3.json
